--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
   </header>
 <form class="search">
   <label>영화검색 :</label> 
-  <input type="text" placeholder="영화제목을 입력하세요.">
-  <button>검색</button>
+  <input type="text" id= "inputtext" placeholder="영화제목을 입력하세요.">
+  <button id = "inputbtn">검색</button>
 </form>
+
+
 </body>
 
 </html>
