--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <script src="src/main.js" defer></script>
+  <script defer src="src/main.js"></script>
   <title>영화추천사이트</title>
 </head>
 
@@ -14,12 +14,14 @@
     <h1>영화추천사이트</h1>
     <p>나의 첫번째 JS 프로젝트</p>
   </header>
-<form class="search">
-  <label>영화검색 :</label> 
-  <input type="text" id= "inputtext" placeholder="영화제목을 입력하세요.">
-  <button id = "inputbtn">검색</button>
-</form>
-
+  <form class="search">
+    <label>영화검색 :</label>
+    <input type="text" id="inputtext" placeholder="영화제목을 입력하세요.">
+    <button id="inputbtn">검색</button>
+  </form>
+  <section class="card-list" id="movieList">
+  </section>
+  
 
 </body>
 
